# whatsapp-bot

./: LICENSE  README.md  pyproject.toml
examples/: class_based_example.py  simple_example.py
whatsappbot/: __init__.py  bot.py  utils.py
whatsappbot/auth/: extract_session.js  inject_session.js  local_profile_auth.py  local_session_auth.py  no_auth.py
