
[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 61.0", "wheel"]

[project]
name = "whatsappbot"
version = "0.0.1"
description = "A Selenium wrapper to automate Whatsapp Web workflows"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Alex Krentz", email = "alexkrentz2@gmail.com"}]
keywords = ["python", "selenium", "whatsapp", "automation"]
dependencies = ["selenium"]

[project.urls]
"Homepage" = "https://github.com/akrentz6/whatsapp-bot"
"Documentation" = "https://github.com/akrentz6/whatsapp-bot"